testing lj_zbl potential

--- a/potentials/lj_zbl.ipynb
+++ b/potentials/lj_zbl.ipynb
@@ -383,8 +383,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1fc162f5-3282-4514-8085-39d60a900f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = \"LJ_ZBL_SiC\"\n",
+    "with open(file) as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "for i, line in enumerate(lines):\n",
+    "    if i > 5:\n",
+    "        tokens = line.split()\n",
+    "        tokens = [float(token) for token in tokens]\n",
+    "        line = f\"{int(tokens[0])} {tokens[1]:.6f} {tokens[2]:.6f} {tokens[3]:.6f}\\n\"\n",
+    "    lines[i] = line\n",
+    "\n",
+    "file = \"LJ_ZBL_SiC\"\n",
+    "with open(file, mode=\"w\") as f:\n",
+    "    for line in lines:\n",
+    "        f.write(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49a158bc-ea1c-425f-9b24-13059dbb783d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -406,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
